--- a/react/locales/pt-BR.json
+++ b/react/locales/pt-BR.json
@@ -4,6 +4,9 @@
   "wishlist-add-button": "Criar",
   "wishlist-list-name-label": "NOME DA LISTA",
   "wishlist-list-name-placeholder": "Ex: Para meu escritório",
-  "wishlist-is-public": "Não Compartilhssar",
-  "wishlist-is-public-hint": "Apenas você poderá ver essa lista"
+  "wishlist-is-public": "Não Compartilhar",
+  "wishlist-is-public-hint": "Apenas você poderá ver essa lista",
+  "wishlist-add-to-list": "Adicionar a Lista",
+  "wishlist-no-lists": "Você não possui listas salvas",
+  "wishlist-new-button": "+ criar nova lista"
 }
