Finishing Lists exhibition

--- a/react/locales/pt-BR.json
+++ b/react/locales/pt-BR.json
@@ -8,5 +8,6 @@
   "wishlist-is-public-hint": "Apenas você poderá ver essa lista",
   "wishlist-add-to-list": "Adicionar a Lista",
   "wishlist-no-lists": "Você não possui listas salvas",
-  "wishlist-new-button": "+ criar nova lista"
+  "wishlist-new-button": "+ criar nova lista",
+  "wishlist-my-lists": "Minhas Listas"
 }
